crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/array_length/division_by_zero/generated/slang/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: Invalid array length, expected integer literal or constant expression.
    ╭─[input.sol:11:13]
    │
 11 │     uint256[A] x;
    │             ┬  
    │             ╰── Error occurred here.
────╯
